* Renamed OperatingSystem to Platform. * Limit unsupported platforms to running cmake off the PATH.